--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -1,18 +1,27 @@
-.section {
+.hero {
     padding: 60px 0;
-    position: relative;
+    /* position: relative; */
 
 }
 
 .hero-container {
+    display: flex;
+    flex-direction: column;
+    gap: 28px;
+}
 
+.hero-big-box {
+    display: flex;
+    flex-direction: column;
+    gap: 28px;
+}
 
-
+.hero-title-text-box {
+    
 }
 
 
 .title-hero {
-
     font-weight: 600;
     font-size: 35.6px;
     line-height: 95%;
@@ -33,7 +42,13 @@
     letter-spacing: -0.02em;
     max-width: 335px;
     
-    margin-bottom: 100px;
+    /* margin-bottom: 100px; */
+}
+
+.hero-second-box {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
 }
 
 
@@ -44,13 +59,13 @@
 
 .item-img-hero {
     border-radius: 100%;
-    margin-bottom: 28px;
+    /* margin-bottom: 28px; */
 
 
 }
 
 .link-hero_and_footer {
-    position: absolute;
+    /* position: absolute; */
     font-weight: 500;
     font-size: 14px;
     line-height: 129%;
@@ -58,9 +73,9 @@
     text-decoration: underline;
     text-decoration-skip-ink: none;
     color: #0c0c0c;
-    top: 320px;
-    right: 20px;
-
+    /* top: 320px;
+    right: 20px; */
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
@@ -81,21 +96,29 @@
     color: #3350e9;
 }
 
-.backdrop-hero-img {}
+.backdrop-hero-img {
+    /* position: relative; */
+}
 
-.watch-img {
+/* .watch-img {
 
     border-radius: 10%;
 
+} */
+ 
+
+.hero-second-box-pictures {
+    position: relative;
 }
 
 .victoria {
     border-radius: 100%;
     stroke-width: 2px;
     stroke: #fbfbfb;
-    position: absolute;
-    left: 20px;
-    top: 294px;
+    /* position: absolute;
+    right: 64px; */
+    /* top: 294px; */
+    z-index: 15;
 }
 
 .john {
@@ -103,8 +126,9 @@
     stroke-width: 2px;
     stroke: #fbfbfb;
     position: absolute;
-    left: 52px;
-    top: 294px;
+   left: 32px;
+    /* top: 294px; */ 
+    /* z-index: 26; */
 }
 
 .anastasia {
@@ -112,8 +136,14 @@
     stroke-width: 2px;
     stroke: #fbfbfb;
     position: absolute;
-    left: 84px;
-    top: 294px;
+    left: 64px;
+    /* top: 294px; */
+    z-index: 77;
+}
+
+.backdrop-hero-img {
+    border-radius: 30px;
+    background-color: rgba(12, 12, 12, 0.2);
 }
 
 
@@ -122,12 +152,21 @@
 
 @media screen and (min-width:768px) {
 
-    .section{
+    .hero {
         padding: 80px 0;
     }
 
+    .hero-container {
+        
+    }
+
+    .hero-big-box {
+        flex-direction: row;
+        gap: 11px;
+    }
+
     .title-hero {
-        max-width: 557px;
+        min-width: 557px;
         font-size: 70px;
         line-height: 86%;
     }
@@ -136,34 +175,47 @@
         font-size: 16px;
         line-height: 125%;
         margin-bottom: 40px;
-        max-width: 480px;
+        min-width: 480px;
+    }
+
+    .hero-second-box {
+        flex-direction: column;
+        align-items: flex-end;
     }
 
     .link-hero_and_footer {
-        top: 320px;
-        right: 32px;
+        /* top: 320px;
+        right: 32px; */
         font-size: 20px;
         line-height: 100%;
 
     }
 
     .victoria {
-        top: 80px;
-        left: 600px;
+        position: static;
+        /* top: 80px;
+        left: 600px; */
     }
 
     .john {
-        top: 80px;
-        left: 641px;
+        position: static;
+        right: 32px;
+        /* top: 80px;
+        left: 641px; */
     }
 
     .anastasia {
-        top: 80px;
-        left: 680px;
+        position: static;
+        /* top: 80px;
+        left: 680px; */
     }
 
-    .watch-img {
+    /* .watch-img {
         border-radius: 5%;
+    } */
+
+    .backdrop-hero-img {
+        border-radius: 50px;
     }
 }
 
@@ -172,6 +224,11 @@
 @media screen and (min-width:1280px) {
 
 
+    .hero-big-box {
+        gap: 0px;
+        justify-content: space-between;
+        }
+
     .title-hero {
         max-width: 597px;
         font-size: 72px;
@@ -179,21 +236,21 @@
     }
 
     .link-hero_and_footer {
-        top: 329px;
-        right: 65px;
+        /* top: 329px;
+        right: 65px; */
         
     }
 
     .victoria {
-        left: 1069px;
+        /* left: 1069px; */
         
     }
 
     .john {
-        left: 1113px;
+        /* left: 1113px; */
     }
 
     .anastasia {
-        left: 1155px;
+        /* left: 1155px; */
     }
 }
