--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,121 +1,93 @@
-<section class="section">
+<section class="hero">
   <div class="container hero-container">
-    <h1 class="title-hero">
-      Welcome to our <span class="collection-color">collection</span> of premium
-      watches
-    </h1>
-    <p class="text-hero">
-      Our watches are not just timepieces, but also an expression of your
-      personality and lifestyle. From classic designs to modern ones, we have a
-      watch to suit every taste and occasion.
-    </p>
-    <ul class="list-img-hero">
-      <li class="item-img-hero">
-        <picture>
-          <source
-            srcset="
-              /img/hero-img-left-desk-1x.jpg 1x,
-              /img/hero-img-left-desk-2x.jpg 2x
-            "
-            media="(min-width:1158px)"
-          />
-          <source
-            srcset="
-              /img/hero-img-left-tab-1x.jpg 1x,
-              /img/hero-img-left-tab-2x.jpg 2x
-            "
-            media="(min-width:768px)"
-          />
-          <source
-            srcset="
-              /img/hero-img-left-mob-1x.jpg 1x,
-              /img/hero-img-left-mob-2x.jpg 2x
-            "
-            media="(max-width:767px)"
-          />
-          <img
-            class="victoria"
-            src="/img/hero-img-left-mob-1x.jpg"
-            alt="Victoria Romashenko"
-          />
-        </picture>
-      </li>
-      <li class="item-img-hero">
-        <picture>
-          <source
-            srcset="
-              /img/hero-img-midle-desk-1x.jpg 1x,
-              /img/hero-img-midle-desk-2x.jpg 2x
-            "
-            media="(min-width:1158px)" />
-          <source
-            srcset="
-              /img/hero-img-midle-tab-1x.jpg 1x,
-              /img/hero-img-midle-tab-2x.jpg 2x
-            "
-            media="(min-width:768px)" />
-          <source
-            srcset="
-              /img/hero-img-midle-mob-1x.jpg 1x,
-              /img/hero-img-midle-mob-2x.jpg 2x
-            "
-            media="(max-width:767px)" />
+    <div class="hero-big-box">
+      <div class="hero-title-text-box">
+        <h1 class="title-hero">
+          Welcome to our <span class="collection-color">collection</span> of premium
+          watches
+        </h1>
+        <p class="text-hero">
+          Our watches are not just timepieces, but also an expression of your
+          personality and lifestyle. From classic designs to modern ones, we have a
+          watch to suit every taste and occasion.
+        </p>
+      </div>
+      <div class="hero-second-box">
+        <div class="hero-second-box-pictures">
+          <ul class="list-img-hero">
+            <li class="item-img-hero">
+              <picture>
+                <source srcset="
+                    /img/hero-img-left-desk-1x.jpg 1x,
+                    /img/hero-img-left-desk-2x.jpg 2x
+                  " media="(min-width:1158px)" />
+                <source srcset="
+                    /img/hero-img-left-tab-1x.jpg 1x,
+                    /img/hero-img-left-tab-2x.jpg 2x
+                  " media="(min-width:768px)" />
+                <source srcset="
+                    /img/hero-img-left-mob-1x.jpg 1x,
+                    /img/hero-img-left-mob-2x.jpg 2x
+                  " media="(max-width:767px)" />
+                <img class="victoria" src="/img/hero-img-left-mob-1x.jpg" alt="Victoria Romashenko" />
+              </picture>
+            </li>
+            <li class="item-img-hero">
+              <picture>
+                <source srcset="
+                    /img/hero-img-midle-desk-1x.jpg 1x,
+                    /img/hero-img-midle-desk-2x.jpg 2x
+                  " media="(min-width:1158px)" />
+                <source srcset="
+                    /img/hero-img-midle-tab-1x.jpg 1x,
+                    /img/hero-img-midle-tab-2x.jpg 2x
+                  " media="(min-width:768px)" />
+                <source srcset="
+                    /img/hero-img-midle-mob-1x.jpg 1x,
+                    /img/hero-img-midle-mob-2x.jpg 2x
+                  " media="(max-width:767px)" />
 
-          <img class="john" src="/img/hero-img-midle-mob-1x.jpg" alt="John Wax"
-        /></picture>
-      </li>
-      <li class="item-img-hero">
-        <picture>
-          <source
-            srcset="
-              /img/hero-img-right-desk-1x.jpg 1x,
-              /img/hero-img-right-desk-2x.jpg 2x
-            "
-            media="(min-width:1158px)" />
-          <source
-            srcset="
-              /img/hero-img-right-tab-1x.jpg 1x,
-              /img/hero-img-right-tab-2x.jpg 2x
-            "
-            media="(min-width:768px)" />
-          <source
-            srcset="
-              /img/hero-img-right-mob-1x.jpg 1x,
-              /img/hero-img-right-mob-2x.jpg 2x
-            "
-            media="(max-width:767px)" />
-          <img
-            class="anastasia"
-            src="/img/hero-img-right-mob-1x.jpg"
-            alt="Anastasia Trachuk"
-        /></picture>
-      </li>
-    </ul>
-
-    <a class="link-hero_and_footer" href="#">Scroll down</a>
+                <img class="john" src="/img/hero-img-midle-mob-1x.jpg" alt="John Wax" />
+              </picture>
+            </li>
+            <li class="item-img-hero">
+              <picture>
+                <source srcset="
+                    /img/hero-img-right-desk-1x.jpg 1x,
+                    /img/hero-img-right-desk-2x.jpg 2x
+                  " media="(min-width:1158px)" />
+                <source srcset="
+                    /img/hero-img-right-tab-1x.jpg 1x,
+                    /img/hero-img-right-tab-2x.jpg 2x
+                  " media="(min-width:768px)" />
+                <source srcset="
+                    /img/hero-img-right-mob-1x.jpg 1x,
+                    /img/hero-img-right-mob-2x.jpg 2x
+                  " media="(max-width:767px)" />
+                <img class="anastasia" src="/img/hero-img-right-mob-1x.jpg" alt="Anastasia Trachuk" />
+              </picture>
+            </li>
+          </ul>
+        </div>
+        <div class="hero-second-box-ancor">
+          <a class="link-hero_and_footer" href="#">Scroll down</a>
+        </div>
+      </div>
+    </div>
     <div class="backdrop-hero-img">
       <picture>
-        <source
-          srcset="
+        <source srcset="
             /img/hero-img-watch-desk-1x.jpg 1x,
             /img/hero-img-watch-desk-2x.jpg 2x
-          "
-          media="(min-width: 1158px)"
-        />
-        <source
-          srcset="
+          " media="(min-width: 1158px)" />
+        <source srcset="
             /img/hero-img-watch-tab-1x.jpg 1x,
             /img/hero-img-watch-tab-2x.jpg 2x
-          "
-          media="(min-width: 768px)"
-        />
-        <source
-          srcset="
+          " media="(min-width: 768px)" />
+        <source srcset="
             /img/hero-img-watch-mob-1x.jpg 1x,
             /img/hero-img-watch-mob-2x.jpg 2x
-          "
-          media="(max-width: 767px)"
-        />
+          " media="(max-width: 767px)" />
         <img src="/img/hero-img-watch-mob-1x.jpg" alt="watch" />
       </picture>
     </div>
