--- a/src/css/advertisement.css
+++ b/src/css/advertisement.css
@@ -18,7 +18,7 @@
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
-    background-image: url(../img/70bg-mobil1x.png);
+    background-image: url(/img/70bg-mobil1x.png);
     background-color: #0c0c0c;
 
     display: flex;
@@ -32,7 +32,7 @@ screen and (min-resolution: 192dpi) and (max-width: 767px),
 screen and (min-resolution: 2dppx) and (max-width: 767px) {
     .your-story-backdrop {
         background-image:
-            url(../img/70bg-mobil2x.png);
+            url(/img/70bg-mobil2x.png);
     }
 }
 
@@ -79,7 +79,7 @@ font-weight: 500;
     }
 .your-story-backdrop {
     padding: 80px 64px;
-        background-image: url(../img/70bg-tablet1x.png);
+        background-image: url(/img/70bg-tablet1x.png);
 
         gap: 32px;
 }
@@ -89,7 +89,7 @@ screen and (min-resolution: 192dpi) and (min-width: 768px),
 screen and (min-resolution: 2dppx) and (min-width: 768px) {
     .your-story-backdrop {
         background-image:
-            url(../img/70bg-tablet2x.png);
+            url(/img/70bg-tablet2x.png);
     }
 }
 
@@ -119,7 +119,7 @@ screen and (min-resolution: 2dppx) and (min-width: 768px) {
     }
 
     .your-story-backdrop{
-        background-image : url(../img/70bg-desktop1x.png);
+        background-image : url(/img/70bg-desktop1x.png);
         /* padding-top: 83px;
         padding-bottom: 83px;
         padding-left: 80px; */
@@ -136,7 +136,7 @@ screen and (min-resolution: 2dppx) and (min-width: 768px) {
     screen and (min-resolution: 2dppx) and (min-width: 1158px) {
         .your-story-backdrop {
                 background-image:
-                    url(../img/70bg-desktop2x.png);
+                    url(/img/70bg-desktop2x.png);
             }
     }
         
