--- a/src/css/header.css
+++ b/src/css/header.css
@@ -53,7 +53,7 @@
     width: 200px;
     height: 100%;
     background: #0c0c0c;
-    background-image: url(../img/header_mob1x.jpg);
+    background-image: url(/img/header_mob1x.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -79,7 +79,7 @@ screen and (min-resolution: 192dpi) and (max-width: 767px),
 screen and (min-resolution: 2dppx) and (max-width: 767px) {
     .menu-header {
     background-image: 
-        url(../img/header_mob2x.jpg);
+        url(/img/header_mob2x.jpg);
     }
 }
 
@@ -126,7 +126,7 @@ screen and (min-resolution: 2dppx) and (max-width: 767px) {
 }
 
 .link-home-header::after {
-    content: url(../img/icons.svg#icon-ellipse);
+    content: url(/img/icons.svg#icon-ellipse);
     width: 8px;
     height: 8px;
     border-radius: 100%;
@@ -191,13 +191,13 @@ screen and (min-resolution: 2dppx) and (max-width: 767px) {
     .menu-header {
         width: 330px;
         height: 100%;
-        background-image: url(../img/header_tab1x.jpg);
+        background-image: url(/img/header_tab1x.jpg);
     }
         @media screen and (min-device-pixel-ratio: 2) and (min-width: 768px),
         screen and (min-resolution: 192dpi) and (min-width: 768px),
         screen and (min-resolution: 2dppx) and (min-width: 768px) {
             .menu-header {
-                background-image: url(../img/header_tab2x.jpg);
+                background-image: url(/img/header_tab2x.jpg);
             }
         }
 
