--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,4 +1,3 @@
-
 <header class="header">
   <div class="container header-container">
     <nav class="header-nav">
@@ -17,21 +16,21 @@
         <li class="header-item-icon">
           <a href="https://www.facebook.com/goITclub/" target="_blank" class="social-link-header">
             <svg width="21" height="20">
-              <use href="../img/icons_header.svg#icon-facebook"></use>
+              <use href="/img/icons_header.svg#icon-facebook"></use>
             </svg>
           </a>
         </li>
         <li class="header-item-icon">
           <a href="https://www.instagram.com/goitclub/" target="_blank" class="social-link-header">
             <svg width="21" height="20">
-              <use href="../img/icons_header.svg#icon-instagram"></use>
+              <use href="/img/icons_header.svg#icon-instagram"></use>
             </svg>
           </a>
         </li>
         <li class="header-item-icon">
           <a href="https://www.youtube.com/c/GoIT" target="_blank" class="social-link-header">
             <svg width="21" height="20">
-              <use href="../img/icons_header.svg#icon-youtube"></use>
+              <use href="/img/icons_header.svg#icon-youtube"></use>
             </svg>
           </a>
         </li>
@@ -66,21 +65,21 @@
           <li class="menu-header-item-icon">
             <a href="https://www.facebook.com/goITclub/" target="_blank" class="menu-social-link-header">
               <svg width="21" height="20">
-                <use href="../img/icons_header.svg#icon-facebook"></use>
+                <use href="/img/icons_header.svg#icon-facebook"></use>
               </svg>
             </a>
           </li>
           <li class="menu-header-item-icon">
             <a href="https://www.instagram.com/goitclub/" target="_blank" class="menu-social-link-header ">
               <svg width="21" height="20">
-                <use href="../img/icons_header.svg#icon-instagram"></use>
+                <use href="/img/icons_header.svg#icon-instagram"></use>
               </svg>
             </a>
           </li>
           <li class="menu-header-item-icon">
             <a href="https://www.youtube.com/c/GoIT" target="_blank" class="menu-social-link-header">
               <svg width="21" height="20">
-                <use href="../img/icons_header.svg#icon-youtube"></use>
+                <use href="/img/icons_header.svg#icon-youtube"></use>
               </svg>
             </a>
           </li>
