--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -17,7 +17,6 @@
     justify-content: flex-start;
     flex-direction: column;
     gap: 92px;
-    max-width: 624px;
 }
 
 .footer-section-logo {
@@ -26,7 +25,6 @@
     justify-content: flex-start;
     flex-direction: column;
     gap: 20px;
-    margin-bottom: 20px;
 }
 
 .logo-footer {
@@ -65,12 +63,13 @@
 }
 
 .footer-phone {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     border: 1px solid rgba(251, 251, 251, 0.2);
     border-radius: 16px;
     width: 152px;
     height: 44px;
-    text-align: center;
-    padding-top: 14px;
 }
 
 .footer-tel-link {
@@ -80,12 +79,14 @@
     line-height: 1.3;
     text-transform: uppercase;
     color: #fbfbfb;
+    text-align: center;
 }
 
 .footer-text-section {
-    margin-top: 40px;
     display: flex;
     align-items: center;
+    justify-content: center;
+    margin-top: 40px;
     width: 279px;
     height: 96px;
 }
@@ -288,8 +289,6 @@
         width: 523px;
         height: 96px;
     }
-
-    .footer-text {}
 
     .footer-content {
         flex-direction: column;
