--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,5 +1,4 @@
-<footer>
-<footer class="footer">
+<footer class="footer" id="to-footer">
     <div class="container footer-container">
         <div class="footer-section">
             <div class="footer-section-logo">
@@ -28,15 +27,21 @@
                     </li>
                 </ul>
             </div>
+            <!--phone-->
             <div class="footer-phone">
                 <a class="footer-tel-link" href="tel:+380684439426">+380 (68) 443-94-26</a>
             </div>
+            <!--text-->
             <div class="footer-text-section">
                 <p class="footer-text">Have the time of your life with our watches: where high-class craftsmanship meets
-                    impeccable design</p>
+                    impeccable
+                    design</p>
             </div>
         </div>
+        <!--zweite-->
         <div class="footer-content">
+            <!--linie ein-->
+            <!--link-->
             <div class="footer-section-menu">
                 <ul class="footer-list">
                     <li><a class="link-footer" href="./index.html">Home</a></li>
@@ -46,14 +51,18 @@
                     <li><a class="link-footer" href="">Reviews</a></li>
                     <li><a class="link-footer" href="">Contact Us</a></li>
                 </ul>
+                <!--text-->
                 <p class="footer-address">
                     1678 S. Pioneer Road Salt Lake City UT 84104
                 </p>
             </div>
+            <!--linie zwei-->
             <div class="footer-section-box">
+                <!--text-->
                 <p class="footer-box-text">
                     ©2023 The Watch Spot. All rights reserved.
                 </p>
+                <!--link-->
                 <ul class="footer-box-list">
                     <li><a class="footer-box-link" href="">Terms of Service</a></li>
                     <li><a class="footer-box-link" href="">Privacy Policy</a></li>
@@ -61,5 +70,4 @@
             </div>
         </div>
     </div>
-</footer>
 </footer>
