--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -4,11 +4,11 @@
       <a class="logo" href="./index.html">watchcharm</a>
       <ul class="header-list-nav">
         <li><a class="link-header link-home-header" href="./index.html">Home</a></li>
-        <li><a class="link-header" href="">About Us</a></li>
-        <li><a class="link-header" href="">Catalog</a></li>
-        <li><a class="link-header" href="">Sale</a></li>
-        <li><a class="link-header" href="">Reviews</a></li>
-        <li><a class="link-header" href="">Contact Us</a></li>
+        <li><a class="link-header" href="#about-us">About Us</a></li>
+        <li><a class="link-header" href="#catalog">Catalog</a></li>
+        <li><a class="link-header" href="#sale">Sale</a></li>
+        <li><a class="link-header" href="#reviews">Reviews</a></li>
+        <li><a class="link-header" href="#contact-us">Contact Us</a></li>
       </ul>
     </nav>
     <div class="header-socials">
@@ -36,14 +36,14 @@
         </li>
       </ul>
     </div>
-    <button type="button" class="open-menu-btn">
+    <button type="button" class="open-menu-btn" id="burger">
       <svg width="28" height="14" class="icon-btn">
             <use href="/img/icons_header.svg#icon-header-menu-open"></use>
       </svg>
     </button>
   </div>
   <!--menu-->
-  <div class="menu-header">
+  <div class="menu-header" id="menu">
     <button type="button" class="btn-close">
       <svg width="24" height="24">
           <use href="/img/icons_header.svg#icon-header-close"></use>
@@ -52,11 +52,11 @@
     <nav class="menu-header-nav">
       <ul class="menu-header-list-nav">
         <li><a class="link-header link-home-header" href="./index.html">Home</a></li>
-        <li><a class="link-header" href="">About Us</a></li>
-        <li><a class="link-header" href="">Catalog</a></li>
-        <li><a class="link-header" href="">Sale</a></li>
-        <li><a class="link-header" href="">Reviews</a></li>
-        <li><a class="link-header" href="">Contact Us</a></li>
+        <li><a class="link-header" href="#about-us">About Us</a></li>
+        <li><a class="link-header" href="#catalog">Catalog</a></li>
+        <li><a class="link-header" href="#sale">Sale</a></li>
+        <li><a class="link-header" href="#reviews">Reviews</a></li>
+        <li><a class="link-header" href="#contact">Contact Us</a></li>
       </ul>
     </nav>
     <div class="menu-header-socials">
