--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -36,14 +36,14 @@
         </li>
       </ul>
     </div>
-    <button type="button" class="open-menu-btn" id="burger">
+    <button type="button" class="open-menu-btn">
       <svg width="28" height="14" class="icon-btn">
             <use href="/img/icons_header.svg#icon-header-menu-open"></use>
       </svg>
     </button>
   </div>
   <!--menu-->
-  <div class="menu-header" id="menu">
+  <div class="menu-header">
     <button type="button" class="btn-close">
       <svg width="24" height="24">
           <use href="/img/icons_header.svg#icon-header-close"></use>
