--- a/src/css/advertisement.css
+++ b/src/css/advertisement.css
@@ -63,13 +63,13 @@ font-weight: 500;
     border: 1px solid rgba(251, 251, 251, 0.15);
     border-radius: 16px;
     /* width: 160px; */
-    /* height: 48px; */
+    height: 48px;
     background-color: transparent;
     /* margin-bottom: 60px; */
 
     line-height: 1.29;
     padding: 15px 43px;
-    max-width: 160px;
+    min-width: 160px;
     display: block;
     transition: 
         color 250ms cubic-bezier(0.4, 0, 0.2, 1),
