--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -20,7 +20,7 @@
 
           <a href="https://www.facebook.com/goITclub/" target="_blank" class="social-link-header">
             <svg width="21" height="20">
-              <use href="/img/icons_header.svg#icon-facebook"></use>
+              <use href="./img/icons_header.svg#icon-facebook"></use>
             </svg>
           </a>
         </li>
@@ -28,7 +28,7 @@
         <li class="header-item-icon">
           <a href="https://www.instagram.com/goitclub/" target="_blank" class="social-link-header">
             <svg width="21" height="20">
-              <use href="/img/icons_header.svg#icon-instagram"></use>
+              <use href="./img/icons_header.svg#icon-instagram"></use>
             </svg>
           </a>
         </li>
@@ -36,7 +36,7 @@
         <li class="header-item-icon">
           <a href="https://www.youtube.com/c/GoIT" target="_blank" class="social-link-header">
             <svg width="21" height="20">
-              <use href="/img/icons_header.svg#icon-youtube"></use>
+              <use href="./img/icons_header.svg#icon-youtube"></use>
             </svg>
           </a>
         </li>
@@ -45,7 +45,7 @@
     </div>
     <button type="button" class="open-menu-btn">
       <svg width="28" height="14" class="icon-btn">
-        <use href="/img/icons_header.svg#icon-header-menu-open"></use>
+        <use href="./img/icons_header.svg#icon-header-menu-open"></use>
       </svg>
     </button>
   </div>
@@ -76,7 +76,7 @@
           <li class="menu-header-item-icon">
             <a href="https://www.facebook.com/goITclub/" target="_blank" class="menu-social-link-header">
               <svg width="21" height="20">
-                <use href="/img/icons_header.svg#icon-facebook"></use>
+                <use href="./img/icons_header.svg#icon-facebook"></use>
               </svg>
             </a>
           </li>
@@ -84,7 +84,7 @@
           <li class="menu-header-item-icon">
             <a href="https://www.instagram.com/goitclub/" target="_blank" class="menu-social-link-header ">
               <svg width="21" height="20">
-                <use href="/img/icons_header.svg#icon-instagram"></use>
+                <use href="./img/icons_header.svg#icon-instagram"></use>
               </svg>
             </a>
           </li>
@@ -92,7 +92,7 @@
           <li class="menu-header-item-icon">
             <a href="https://www.youtube.com/c/GoIT" target="_blank" class="menu-social-link-header">
               <svg width="21" height="20">
-                <use href="/img/icons_header.svg#icon-youtube"></use>
+                <use href="./img/icons_header.svg#icon-youtube"></use>
               </svg>
             </a>
           </li>
