--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -21,18 +21,18 @@
 
           <picture>
             <source srcset="
-                              /img/hero-img-desk-1x.png 1x,
-                              /img/hero-img-desk-2x.png 2x
+                              ./img/hero-img-desk-1x.png 1x,
+                              ./img/hero-img-desk-2x.png 2x
                             " media="(min-width:1158px)" />
             <source srcset="
-                              /img/hero-img-tab-1x.png 1x,
-                              /img/hero-img-tab-2x.png 2x
+                              ./img/hero-img-tab-1x.png 1x,
+                              ./img/hero-img-tab-2x.png 2x
                             " media="(min-width:768px)" />
             <source srcset="
-                              /img/hero-img-mob-1x.png 1x,
-                              /img/hero-img-mob-2x.png 2x
+                              ./img/hero-img-mob-1x.png 1x,
+                              ./img/hero-img-mob-2x.png 2x
                             " media="(max-width:767px)" />
-            <img class="" src="../img/hero-img-mob-1x.png" alt="Victoria Romashenko" />
+            <img class="" src="./img/hero-img-mob-1x.png" alt="Victoria Romashenko" />
           </picture>
 
         </div>
@@ -47,18 +47,18 @@
 
       <picture>
         <source srcset="
-            /img/hero-img-watch-desk-1x.jpg 1x,
-            /img/hero-img-watch-desk-2x.jpg 2x
+            ./img/hero-img-watch-desk-1x.jpg 1x,
+            ./img/hero-img-watch-desk-2x.jpg 2x
           " media="(min-width: 1158px)" />
         <source srcset="
-            /img/hero-img-watch-tab-1x.jpg 1x,
-            /img/hero-img-watch-tab-2x.jpg 2x
+            ./img/hero-img-watch-tab-1x.jpg 1x,
+            ./img/hero-img-watch-tab-2x.jpg 2x
           " media="(min-width: 768px)" />
         <source srcset="
-            /img/hero-img-watch-mob-1x.jpg 1x,
-            /img/hero-img-watch-mob-2x.jpg 2x
+            ./img/hero-img-watch-mob-1x.jpg 1x,
+            ./img/hero-img-watch-mob-2x.jpg 2x
           " media="(max-width: 767px)" />
-        <img src="/img/hero-img-watch-mob-1x.jpg" alt="watch" />
+        <img src="./img/hero-img-watch-mob-1x.jpg" alt="watch" />
       </picture>
 
     </div>
