--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -6,8 +6,8 @@
     <ul class="reviews-list">
       <li class="review review-1">
 
-        <img class="review-photo" src="/img/reviews-img-1-1x.jpg"
-          srcset="/img/reviews-img-1-1x.jpg 1x, /reviews-img-1-2x 2x" alt="John Wax" width="56" height="56" />
+        <img class="review-photo" src="./img/reviews-img-1-1x.jpg"
+          srcset="./img/reviews-img-1-1x.jpg 1x, ./reviews-img-1-2x 2x" alt="John Wax" width="56" height="56" />
 
         <h3 class="review-title-name">John Wax</h3>
 
@@ -21,8 +21,8 @@
 
       <li class="review review-2">
 
-        <img class="review-photo" src="/img/reviews-img-2-1x.jpg"
-          srcset="/img/reviews-img-2-1x.jpg 1x, /reviews-img-2-2x 2x" alt="Victoria Romasherko" width="56"
+        <img class="review-photo" src="./img/reviews-img-2-1x.jpg"
+          srcset="./img/reviews-img-2-1x.jpg 1x, ./reviews-img-2-2x 2x" alt="Victoria Romasherko" width="56"
           height="56" />
 
         <h3 class="review-title-name">Victoria Romasherko</h3>
@@ -36,8 +36,9 @@
       </li>
       <li class="review review-3">
 
-        <img class="review-photo" src="/img/reviews-img-3-1x.jpg"
-          srcset="/img/reviews-img-3-1x.jpg 1x, /reviews-img-3-2x 2x" alt="Anastasia Trochuk" width="56" height="56" />
+        <img class="review-photo" src="./img/reviews-img-3-1x.jpg"
+          srcset="./img/reviews-img-3-1x.jpg 1x, ./reviews-img-3-2x 2x" alt="Anastasia Trochuk" width="56"
+          height="56" />
 
         <h3 class="review-title-name">Anastasia Trochuk</h3>
 
