--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,34 +1,47 @@
 /*footer*/
 .footer {
-    width: 100%;
+    /* width: 100%;
     display: flex;
     align-items: flex-start;
     justify-content: flex-start;
     flex-direction: row;
-    gap: 10px;
-    border-radius: 30px;
-    padding: 40px 28px 28px 28px;
-    background: #0c0c0c;
+    gap: 10px; */
+    /* border-radius: 30px; */
+    /* padding: 40px 28px 28px 28px; */
+    
+
+    padding-top: 60px;
+    padding-bottom: 60px;
 }
 
 .footer-container {
-    display: flex;
-    align-items: flex-start;
-    justify-content: flex-start;
+    
+    /* align-items: flex-start;
+    justify-content: flex-start; */
+    
+
+  
+}
+
+.footer-background-color {
+    background: #0c0c0c;
+    border-radius: 30px;
+    padding: 40px 28px 28px 28px;
     flex-direction: column;
     gap: 92px;
+    display: flex;
 }
 
 .footer-section-logo {
     display: flex;
     align-items: flex-start;
-    justify-content: flex-start;
+    /* justify-content: flex-start; */
     flex-direction: column;
     gap: 20px;
 }
 
 .logo-footer {
-    font-family: "Gilroy", sans-serif;
+    /* font-family: "Gilroy", sans-serif; */
     font-weight: 500;
     font-size: 16px;
     letter-spacing: -0.02em;
@@ -37,9 +50,9 @@
 
 .footer-icon-socials {
     display: flex;
-    align-items: center;
+    /* align-items: center;
     justify-content: center;
-    flex-direction: row;
+    flex-direction: row; */
     gap: 10px;
 }
 
@@ -55,6 +68,8 @@
     fill: #fbfbfb;
     width: 16px;
     height: 16px;
+
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-social-link:hover,
@@ -74,26 +89,26 @@
 }
 
 .footer-tel-link {
-    font-family: "Gilroy", sans-serif;
+    /* font-family: "Gilroy", sans-serif; */
     font-weight: 500;
     font-size: 12px;
     line-height: 1.3;
     text-transform: uppercase;
     color: #fbfbfb;
-    text-align: center;
+    /* text-align: center; */
 }
 
 .footer-text-section {
-    display: flex;
+    /* display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: center; */
     margin-top: 40px;
-    width: 279px;
+    max-width: 279px;
     height: 96px;
 }
 
 .footer-text {
-    font-family: "Gilroy", sans-serif;
+    /* font-family: "Gilroy", sans-serif; */
     font-weight: 600;
     font-size: 20px;
     line-height: 1.2;
@@ -105,18 +120,18 @@
 
 .footer-content {
     display: flex;
-    align-items: flex-start;
-    justify-content: flex-start;
+    /* align-items: flex-start;
+    justify-content: flex-start; */
     flex-direction: column;
     gap: 48px;
 }
 
 .footer-section-menu {
     display: flex;
-    align-items: flex-start;
-    justify-content: flex-start;
+    /* align-items: flex-start;
+    justify-content: flex-start; */
     position: relative;
-    flex-direction: row;
+    /* flex-direction: row; */
     gap: 49px;
 }
  .footer-section-menu::after {
@@ -131,33 +146,33 @@
 .footer-list {
     display: flex;
     flex-wrap: wrap;
-    align-items: flex-start;
+    /* align-items: flex-start;
     justify-content: flex-start;
-    flex-direction: row;
+    flex-direction: row; */
     gap: 16px 13px;
     min-width: 147px;
 }
 
 .link-footer {
-    font-family: "Gilroy", sans-serif;
+    /* font-family: "Gilroy", sans-serif; */
     font-weight: 500;
     font-size: 12px;
     line-height: 1.3;
-    text-align: center;
+    /* text-align: center; */
     color: #fbfbfb;
 }
 
 .footer-address {
-    font-family: "Gilroy", sans-serif;
+    /* font-family: "Gilroy", sans-serif; */
     font-weight: 500;
     font-size: 12px;
     line-height: 1.3;
     color: #fbfbfb;
-    margin: 0;
+    /* margin: 0; */
 }
 
 .footer-box-text {
-    font-family: "Gilroy", sans-serif;
+    /* font-family: "Gilroy", sans-serif; */
     font-weight: 500;
     font-size: 10px;
     line-height: 1.4;
@@ -168,14 +183,14 @@
 
 .footer-box-list {
     display: flex;
-    align-items: flex-start;
-    justify-content: flex-start;
+    /* align-items: flex-start;
+    justify-content: flex-start; */
     flex-direction: row;
     gap: 20px;
 }
 
 .footer-box-link {
-    font-family: "Gilroy", sans-serif;
+    /* font-family: "Gilroy", sans-serif; */
     font-weight: 500;
     font-size: 10px;
     line-height: 1.4;
@@ -189,8 +204,9 @@
         flex-direction: column;
     }
 
-    .footer-container {
+    .footer-background-color {
         gap: 100px;
+        position: relative;
     }
 
     .logo-footer {
@@ -198,14 +214,15 @@
     }
 
     .footer-phone {
-        display: flex;
+        /* display: flex;
         align-items: center;
-        justify-content: center;
+        justify-content: center; */
+        position: absolute;
         top: 40px;
         right: 40px;
         width: 160px;
         height: 48px;
-        padding: 0;
+        /* padding: 0; */
     }
 
     .footer-tel-link {
@@ -214,7 +231,7 @@
     }
 
     .footer-text-section {
-        width: 524px;
+        max-width: 524px;
         height: 96px;
         margin-top: 86px;
     }
@@ -277,14 +294,18 @@
 
 @media screen and (min-width: 1280px) {
     .footer-container {
+        /* gap: 126px;
+        margin: 0; */
+    }
+
+    .footer-background-color {
         gap: 126px;
-        margin: 0;
     }
 
     .footer-section {
         display: flex;
-        flex-direction: row;
-        flex-wrap: nowrap;
+        /* flex-direction: row;
+        flex-wrap: nowrap; */
     }
     .footer-text,
     .footer-text-section,
@@ -292,6 +313,7 @@
     .footer-tel-link {
         display: none;
     }
+
     .footer-section-logo {
         margin-right: 178px;
     }
@@ -307,6 +329,7 @@
         letter-spacing: -0.02em;
         text-align: center;
         color: #fbfbfb;
+
     }
     .footer-phone-desktop {
         border: 1px solid rgba(251, 251, 251, 0.2);
